# volnoti

./: README.md
pkg/arch/: PKGBUILD
res/: Makefile.am
src/: client.c  common.c  common.h  daemon.c  gopt.c  gopt.h  notification.c  notification.h  specs.xml
