datadir = $(datarootdir)/pixmaps/@PACKAGE@/
ICONS = brightness-full.svg brightness-half.svg brightness-low.svg brightness.svg \
		capsLocked.svg capsUnlocked.svg \
		mic_muted.svg mic_on.svg \
		next.svg pause.svg \
		play.svg previous.svg \
		progressbar_empty.png progressbar_full.png \
		volume_high.svg volume_medium.svg volume_low.svg volume_off.svg volume_muted.svg

data_DATA = $(ICONS)
EXTRA_DIST = $(ICONS)
